# olylumo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
tests/: CMakeLists.txt
tests/olylumocli/bam/: olylumocli.xml
tests/olylumocli/bam/Scripts/: olylumocli.cs
tests/olylumogui/: CMakeLists.txt
tests/olylumogui/bam/: olylumogui.xml
tests/olylumogui/bam/Scripts/: olylumogui.cs
tests/olylumogui/resources/: diffuse_sphere.xml  metal_spheres.xml  olylumogui.qrc  rough_metal_spheres.xml
tests/olylumogui/resources/osx/: Info.plist
tests/olylumogui/source/: imageresultwidget.cpp  imageresultwidget.h  main.cpp  raycastworker.cpp  raycastworker.h  scenemodel.cpp  scenemodel.h  scenewidget.cpp  scenewidget.h  viewerwidget.cpp  viewerwidget.h
